--- a/desafios/desafio10/css/style.css
+++ b/desafios/desafio10/css/style.css
@@ -58,6 +58,7 @@ nav {
     background-color: var(--cor4);
     padding: 10px;
     box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.3);
+    margin: 10px;
 }
 
 nav > a {
