--- a/desafios/desafio10/css/style.css
+++ b/desafios/desafio10/css/style.css
@@ -198,7 +198,7 @@ aside a:hover {
 
 /* botão voltar ao topo */
 
-a.btn-fixed {
+/* a.btn-fixed {
     padding: 10px;
     font-size: 2em;
     text-decoration: none;
@@ -216,7 +216,7 @@ a img.btn-img {
 
 a img.btn-img:hover {
     background-color: rgba(255, 255, 255, 0.8);
-}
+} */
 
 footer {
     color: white;
