--- a/desafios/desafio012/estilo/style.css
+++ b/desafios/desafio012/estilo/style.css
@@ -6,18 +6,21 @@
 /* font-family: 'Sriracha', cursive; */
 
 :root {
-  --font-title: 'Passion One';
-  --font-text: 'Sriracha';
+  --font-padrao: Verdana, Geneva, Tahoma, sans-serif;
+  --font-title: 'Passion One', cursive;
+  --font-text: 'Sriracha', cursive;
 }
 
 * {
   margin: 0px;
   padding: 0px;
+  font-size: 1em;
 }
 
 html, body {
   min-height: 100vh;
   background-color: darkgray;
+  font-family: var(--font-padrao);
 }
 
 header {
@@ -27,6 +30,8 @@ header {
 }
 
 header > h1 {
+  font-family: var(--font-title);
+  font-size: 10vw;
   padding-top: 50px;
   font-variant: small-caps;
   /* text-transform: uppercase; - TODAS AS LETRAS MAIÚSCULAS*/
@@ -51,7 +56,8 @@ section {
   padding-bottom: 10vh;
   padding-left: 30px;
   line-height: 2em;
-  
+  font-family: var(--font-text);
+  font-size: 3.5vw;
 }
 
 section.normal {
@@ -66,7 +72,8 @@ color: white;
 
 section.imagem > p {
   background-color: rgba(0, 0, 0, 0.2);
-  width: 400px;
+  display: inline-block;
+  padding: 10px;
 }
 
 footer {
