--- a/desafios/desafio012/estilo/style.css
+++ b/desafios/desafio012/estilo/style.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap'); /* font-family: 'Passion One', cursive; */
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
-/* font-family: 'Sriracha', cursive; */
+
 
 :root {
   --font-padrao: Verdana, Geneva, Tahoma, sans-serif;
@@ -27,6 +27,7 @@ header {
   background-color: black;
   color: white;
   text-align: center;
+  padding-bottom: 20px;
 }
 
 header > h1 {
@@ -60,20 +61,39 @@ section {
   font-size: 3.5vw;
 }
 
+section > p {
+  padding-bottom: 2em;
+}
+
 section.normal {
-background-color: white;
-color: black;
+  background-color: white;
+  color: black;
 }
 
 section.imagem {
-background-color: rgb(51, 51, 51);
-color: white;
+  background-color: rgb(51, 51, 51);
+  color: white;
+  box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.425);
+  background-position: right center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 section.imagem > p {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.45);
+  border-radius: 5px;
   display: inline-block;
   padding: 10px;
+  text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+  background-image: url(../imagens/background001.jpg);
+  
+}
+
+section#img02 {
+  background-image: url(../imagens/background002.jpg);
 }
 
 footer {
